crates/svelte-parser/tests/snapshots/snapshots__const_with_regex_test.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
{#if true}{@const matches = /rgba\([^)]+\)$/.test(color)}{matches}{/if}

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            IfBlock(
                IfBlock {
                    span: Span {
                        start: 0,
                        end: 71,
                    },
                    condition_span: Span {
                        start: 5,
                        end: 9,
                    },
                    condition: "true",
                    consequent: Fragment {
                        nodes: [
                            ConstTag(
                                ConstTag {
                                    span: Span {
                                        start: 10,
                                        end: 57,
                                    },
                                    declaration_span: Span {
                                        start: 18,
                                        end: 56,
                                    },
                                    declaration: "matches = /rgba\\([^)]+\\)$/.test(color)",
                                },
                            ),
                            Expression(
                                ExpressionTag {
                                    span: Span {
                                        start: 57,
                                        end: 66,
                                    },
                                    expression_span: Span {
                                        start: 58,
                                        end: 65,
                                    },
                                    expression: "matches",
                                },
                            ),
                        ],
                        span: Span {
                            start: 10,
                            end: 66,
                        },
                    },
                    alternate: None,
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 71,
        },
    },
    span: Span {
        start: 0,
        end: 71,
    },
}
