crates/svelte-parser/tests/snapshots/snapshots__declaration_tag_vs_expression.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
{const x = 1}
{constFoo}
{let}
{x}

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            DeclarationTag(
                DeclarationTag {
                    span: Span {
                        start: 0,
                        end: 13,
                    },
                    declaration_span: Span {
                        start: 7,
                        end: 12,
                    },
                    declaration: "x = 1",
                    kind: Const,
                },
            ),
            Expression(
                ExpressionTag {
                    span: Span {
                        start: 14,
                        end: 24,
                    },
                    expression_span: Span {
                        start: 15,
                        end: 23,
                    },
                    expression: "constFoo",
                },
            ),
            Expression(
                ExpressionTag {
                    span: Span {
                        start: 25,
                        end: 30,
                    },
                    expression_span: Span {
                        start: 26,
                        end: 29,
                    },
                    expression: "let",
                },
            ),
            Expression(
                ExpressionTag {
                    span: Span {
                        start: 31,
                        end: 34,
                    },
                    expression_span: Span {
                        start: 32,
                        end: 33,
                    },
                    expression: "x",
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 34,
        },
    },
    span: Span {
        start: 0,
        end: 34,
    },
}
