crates/svelte-parser/tests/snapshots/snapshots__directive_modifiers.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
<button on:click|preventDefault|stopPropagation={handler}>Click</button>

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Element(
                Element {
                    span: Span {
                        start: 0,
                        end: 72,
                    },
                    name: "button",
                    attributes: [
                        Directive(
                            Directive {
                                span: Span {
                                    start: 8,
                                    end: 57,
                                },
                                kind: On,
                                name: "click",
                                modifiers: [
                                    "preventDefault",
                                    "stopPropagation",
                                ],
                                expression: Some(
                                    ExpressionValue {
                                        span: Span {
                                            start: 8,
                                            end: 57,
                                        },
                                        expression_span: Span {
                                            start: 49,
                                            end: 56,
                                        },
                                        expression: "handler",
                                        is_quoted: false,
                                    },
                                ),
                                leading_comments: [],
                                trailing_comments: [],
                            },
                        ),
                    ],
                    children: [
                        Text(
                            Text {
                                span: Span {
                                    start: 58,
                                    end: 63,
                                },
                                data: "Click",
                                is_whitespace: false,
                            },
                        ),
                    ],
                    self_closing: false,
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 72,
        },
    },
    span: Span {
        start: 0,
        end: 72,
    },
}
