crates/svelte-parser/tests/snapshots/snapshots__division_not_regex.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
{(a + b) / 2}

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Expression(
                ExpressionTag {
                    span: Span {
                        start: 0,
                        end: 13,
                    },
                    expression_span: Span {
                        start: 1,
                        end: 12,
                    },
                    expression: "(a + b) / 2",
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 13,
        },
    },
    span: Span {
        start: 0,
        end: 13,
    },
}
